sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:15: error: value ==- is not a member of Int
    if (minj==-1) {setValeur(minj,temp)}
            ^AlgInsertionSort:16: error: value =- is not a member of Int
    minj=-1
        ^